# near-collections

./: README.md
contract/: Cargo.toml
contract/src/: lib.rs
mini-colls/: Cargo.toml
mini-colls/src/: lib.rs
scripts/: farm.js
test/: contract.test.js  test-utils.js
utils/: config.js
